--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Farcana Landing Page</title>
     <link rel="stylesheet" href="index.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -14,6 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+
+    <link rel="shortcut icon" href="farcana.png" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -21,14 +23,12 @@
         <a href="#home" class="logo"><img src="farcana.svg" alt="" /></a>
         <div class="navbar">
           <a href="#home" class="nav-link">Home</a>
-          <a href="#services" class="nav-link">Partners</a>
           <a href="#product" class="nav-link">Team</a>
           <a href="#team" class="nav-link">Advisors</a>
-          <a href="#review" class="nav-link">FAQ</a>
+          <a href="#review" class="nav-link">Characters</a>
+          <a href="#book" class="nav-link">Socials</a>
         </div>
         <div class="nav-icons">
-          <a href="#"><i class="bx bx-shopping-bag"></i></a>
-
           <div class="menu-icon">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -46,41 +46,13 @@
         </h1>
         <p>Show Your Skills In Farcana, A Team-Based Arena Shooter Game</p>
 
-        <a href="" class="btn">
-          <span>PLAY NOW</span>
+        <a href="https://www.farcana.com/" class="btn">
+          <span>EXPLORE</span>
           <i class="bx bx-up-arrow-alt"></i>
         </a>
       </div>
 
-      <img src="farcana home.png" alt="" class="home-img" />
-    </section>
-
-    <section class="services container" id="services">
-      <div class="heading">
-        <h2>MEET OUR PARTNERS <br /></h2>
-      </div>
-      <div class="service-content">
-        <div class="ser-box">
-          <img src="animoca.png" alt="" />
-          <p>Animoca brands</p>
-        </div>
-        <div class="ser-box">
-          <img src="animoca.png" alt="" />
-          <p>Animoca brands</p>
-        </div>
-        <div class="ser-box">
-          <img src="animoca.png" alt="" />
-          <p>Animoca brands</p>
-        </div>
-        <div class="ser-box">
-          <img src="animoca.png" alt="" />
-          <p>Animoca brands</p>
-        </div>
-        <div class="ser-box">
-          <img src="animoca.png" alt="" />
-          <p>Animoca brands</p>
-        </div>
-      </div>
+      <img src="farcana jj.png" alt="" />
     </section>
 
     <section class="products container" id="product">
@@ -90,175 +62,205 @@
 
       <div class="product-content">
         <div class="product-box">
-          <i class="bx bxl-twitter twitter-icon"></i>
           <img src="founder.png" alt="" />
           <p>Ilman Shazhaev</p>
           <h2>CEO & Founder</h2>
-          <div class="product-info">
-            <span>14</span>
-          </div>
         </div>
 
         <div class="product-box">
-          <i class="bx bxl-twitter twitter-icon"></i>
-          <img src="animoca.png" alt="" />
-          <p>4 tyoes available</p>
+          <img src="farcana editor.png" alt="" />
+          <p>Alex Minkin</p>
           <h2>CEO & Founder</h2>
-          <div class="product-info">
-            <span>14</span>
-          </div>
         </div>
 
         <div class="product-box">
-          <i class="bx bxl-twitter twitter-icon"></i>
-          <img src="animoca.png" alt="" />
-          <p>4 tyoes available</p>
-          <h2>CEO & Founder</h2>
-          <div class="product-info">
-            <span>14</span>
-          </div>
+          <img src="chief.png" alt="" />
+          <p>Islam Shazhaev</p>
+          <h2>Chief Business Development Officer</h2>
         </div>
 
         <div class="product-box">
-          <i class="bx bxl-twitter twitter-icon"></i>
-          <img src="animoca.png" alt="" />
-          <p>4 tyoes available</p>
-          <h2>CEO & Founder</h2>
-          <div class="product-info">
-            <span>14</span>
-          </div>
+          <img src="marketing.jpg" alt="" />
+          <p>George Dobrodeev</p>
+          <h2>Chief Marketing Advisor</h2>
+        </div>
+
+        <div class="product-box">
+          <img src="operating.png" alt="" />
+          <p>Arbi Tularov</p>
+          <h2>Chief Operating Officer</h2>
+        </div>
+
+        <div class="product-box">
+          <img src="publishing.jpg" alt="" />
+          <p>Ozgur Ozalp</p>
+          <h2>Head Of Publishing</h2>
+        </div>
+
+        <div class="product-box">
+          <img src="esports.png" alt="" />
+          <p>Imam Idrisov</p>
+          <h2>Head Of Esports</h2>
         </div>
       </div>
     </section>
 
-    <section class="team-container" id="team">
+    <section class="team container" id="team">
       <div class="heading">
         <h2>MEET OUR ADVISORS</h2>
       </div>
 
       <div class="team-content">
-        <div class="team-box">
-          <img src="founder.png" alt="" />
-          <h2>SARA JONES</h2>
-          <span>CEO & FOUNDER</span>
-          <p>SHE IS GREAT</p>
+        <div class="product-box">
+          <img src="travladd.webp" alt="" />
+          <p>Travladd Crypto</p>
+          <h2>Co-Founder @Kingfinance</h2>
         </div>
 
-        <div class="team-box">
-          <img src="animoca.png" alt="" />
-          <h2>SARA JONES</h2>
-          <span>CEO & FOUNDER</span>
-          <p>SHE IS GREAT</p>
+        <div class="product-box">
+          <img src="advisor1.png" alt="" />
+          <p>Carlos Rodriguez</p>
+          <h2>Co-Founder @G2Esports</h2>
         </div>
 
-        <div class="team-box">
-          <img src="animoca.png" alt="" />
-          <h2>SARA JONES</h2>
-          <span>CEO & FOUNDER</span>
-          <p>SHE IS GREAT</p>
+        <div class="product-box">
+          <img src="advisor2.webp" alt="" />
+          <p>Whit Gibbs</p>
+          <h2>Co-Founder @Compass Mining</h2>
         </div>
 
-        <div class="team-box">
-          <img src="animoca.png" alt="" />
-          <h2>SARA JONES</h2>
-          <span>CEO & FOUNDER</span>
-          <p>SHE IS GREAT</p>
+        <div class="product-box">
+          <img src="advisor3.webp" alt="" />
+          <p>Towqeer Gilkar</p>
+          <h2>CEO @Emchain</h2>
+        </div>
+
+        <div class="product-box">
+          <img src="kapo.webp" alt="" />
+          <p>Kapo</p>
+          <h2>CEO @Kapo Capital</h2>
+        </div>
+
+        <div class="product-box">
+          <img src="rarestone.webp" alt="" />
+          <p>Charles Read</p>
+          <h2>Founding Partner @Rarestone Capital</h2>
         </div>
       </div>
     </section>
 
     <section class="review container" id="review">
       <div class="heading">
-        <h2>Frequently Asked Quetions</h2>
+        <h2>CHARACTERS</h2>
       </div>
 
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="review-box">
-              <img src="farcana.svg" alt="" />
-              <h2>WHEN NFTS?</h2>
+              <img src="muayii.png" alt="" />
+              <h2>MUADDI</h2>
               <span
-                >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Necessitatibus accusantium id molestias eveniet corrupti ab
-                nemo<br />
-                repudiandae quibusdam exercitationem, veniam doloribus
-                delectus<br />
-                voluptas cum natus tempora aliquam iusto quo explicabo?</span
+                >Introducing Muaddi, the perfect weapon of the Red Beacon and
+                the tragic heroine of Anthill. She used to be the nemesis of the
+                corporations until they transformed her into their most potent
+                weapon through the power of biohacking technology. Her body
+                serves as the core component of Stasis, a cutting-edge quantum
+                teleporter that allows Farcana's stars to avoid risking their
+                lives in the arena.</span
               >
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates doloribus vero, nesciunt labore, repellat vel nam
-                tenetur, maxime ea neque a aliquid tempore enim culpa vitae
-                itaque. Corrupti, voluptate nemo.
-              </p>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="review-box">
-              <img src="farcana.svg" alt="" />
-              <h2>WHEN NFTS?</h2>
-              <span
-                >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Necessitatibus accusantium id molestias eveniet corrupti ab
-                nemo<br />
-                repudiandae quibusdam exercitationem, veniam doloribus
-                delectus<br />
-                voluptas cum natus tempora aliquam iusto quo explicabo?</span
+              <img src="farcana runner.png" alt="" />
+              <h2>Q</h2>
+              <span>
+                Introducing Q, the last person to leave Earth. Born in the
+                shadows beneath the ground, Q fled Earth as an illegal passenger
+                on the last ship. Unable to see the sky above the earth, he
+                strived to conquer the skies of Mars. Q vowed not to abandon
+                those in distress, as the earthlings had abandoned him. His
+                wings, ambitions, and maximalism led him to where any dream is
+                possible - to Farcana.</span
               >
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates doloribus vero, nesciunt labore, repellat vel nam
-                tenetur, maxime ea neque a aliquid tempore enim culpa vitae
-                itaque. Corrupti, voluptate nemo.
-              </p>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="review-box">
-              <img src="farcana.svg" alt="" />
-              <h2>WHEN NFTS?</h2>
+              <img src="download.png" alt="" />
+              <h2>CERBERUS</h2>
               <span
-                >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Necessitatibus accusantium id molestias eveniet corrupti ab
-                nemo<br />
-                repudiandae quibusdam exercitationem, veniam doloribus
-                delectus<br />
-                voluptas cum natus tempora aliquam iusto quo explicabo?</span
-              >
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates doloribus vero, nesciunt labore, repellat vel nam
-                tenetur, maxime ea neque a aliquid tempore enim culpa vitae
-                itaque. Corrupti, voluptate nemo.
-              </p>
+                >Meet Cerberus, the formidable force behind Mars' security and
+                prosperity. He granted the planet its freedom and a place in the
+                sun. But at a cost. His brutal methods of clearing Mars of
+                unlawful settlers and liberating corporate lands earned his
+                family a place on the planet, but he wasn't ready to give up his
+                own freedom. In a bold move, he eliminated his squad of thugs,
+                the last criminals on Mars, and sought a fresh start in
+                Farcana—a place of redemption.
+              </span>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="review-box">
-              <img src="farcana.svg" alt="" />
-              <h2>WHEN NFTS?</h2>
+              <img src="diana.png" alt="" />
+              <h2>DIANA</h2>
               <span
-                >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Necessitatibus accusantium id molestias eveniet corrupti ab
-                nemo<br />
-                repudiandae quibusdam exercitationem, veniam doloribus
-                delectus<br />
-                voluptas cum natus tempora aliquam iusto quo explicabo?</span
+                >Meet Diana — the voice of humanity! Her participation in the
+                game sends shivers down the spine of all earthlings in orbit. In
+                the arena, the politician defends the interests of the entire
+                human race. Diana is ready to prove that her words carry weight.
+                She will participate in the games herself, and if she wins,
+                she'll award the prize to a lucky person in orbit. Her death
+                could lead to war, so her victory is so important. Follow the
+                heroic protector whose participation can change the world!</span
               >
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates doloribus vero, nesciunt labore, repellat vel nam
-                tenetur, maxime ea neque a aliquid tempore enim culpa vitae
-                itaque. Corrupti, voluptate nemo.
-              </p>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="review-box">
+              <img src="teacher.png" alt="" />
+              <h2>TEACHER</h2>
+              <span
+                >Meet Teacher — a bright, talented, and kind guy who grew up in
+                a small village orphanage in the Philippines. From childhood, he
+                had a passion for drawing, and his talent was noticed by a
+                teacher who supported and inspired him to become a teacher
+                himself. When the shelter where he grew up was closed, our hero
+                and the other wards organized a protest. They created beautiful
+                posters and kites and took to the streets. This "Colorful
+                Protest" unexpectedly turned into the most massive and bloody
+                riot in history. Teacher ended up in a juvenile prison, where he
+                began teaching inmates drawing, literature, and history. After
+                his release, he was unable to get a teaching job due to his
+                criminal record. However, he continued to help street children
+                by organizing free lessons in public parks.</span
+              >
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="review-box">
+              <img src="sherwood.png" alt="" />
+              <h2>SHERWOOD</h2>
+              <span>
+                Amelia Sherwood used to be the youngest captain in the Air
+                Force. Sherwood did not fail a single time during her service in
+                the Air Force. She had to make hard decisions all the time, and
+                they didn't always have the best outcomes. She was indeed a good
+                soldier, but was she a good person? Doubt began creeping
+                in.</span
+              >
             </div>
           </div>
         </div>
-
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
     </section>
@@ -267,52 +269,35 @@
       <img src="farcana banner.png" alt="" class="book-img" />
       <div class="book-overlay"></div>
       <div class="book-data">
-        <h2>
-          Let's Book A Table <br />
-          For You
-        </h2>
-        <form action="book">
-          <div class="input-box">
-            <i class="bx bx-phone-call"></i>
-            <input type="tel" name="" placeholder="Your Number" id="" />
-          </div>
-          <div class="input-box">
-            <i class="bx bx-user"></i>
-            <input type="number" name="" placeholder="People" id="" />
-          </div>
-          <a href="#" class="book-btn">Book Table</a>
-        </form>
-        <p>We will contact you to confirm your bookings</p>
+        <a
+          href="https://www.instagram.com/farcana_official?igshid=MDM4ZDc5MmU%3D"
+          ><h2>INSTAGRAM</h2></a
+        >
+        <a href="https://x.com/FarcanaOfficial?s=20"><h2>TWITTER</h2></a>
+        <a href="https://discord.gg/sG9rJrF2"><h2>DISCORD</h2></a>
       </div>
     </section>
 
     <section class="footer container">
       <div class="footer-box">
-        <a href="#" class="logo"><img src="farcana.svg" alt="" /></a>
+        <a href="https://www.farcana.com/" class="logo">FARCANA</a>
         <div class="social">
-          <a href="#"><i class="bx bxl-youtube"></i></a>
-          <a href="#"><i class="bx bxl-youtube"></i></a>
-          <a href="#"><i class="bx bxl-youtube"></i></a>
+          <a href="https://www.youtube.com/@Farcana"
+            ><i class="bx bxl-youtube"></i
+          ></a>
         </div>
       </div>
 
       <div class="footer-box">
-        <h3>About</h3>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
+        <a href="https://www.farcana.com/the-game">The Game</a>
+        <a href="https://www.farcana.com/stars">Stars & Game</a>
       </div>
       <div class="footer-box">
-        <h3>About</h3>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
+        <a href="https://www.farcana.com/story">Story</a>
+        <a href="https://www.farcana.com/blog">Blog</a>
       </div>
       <div class="footer-box">
-        <h3>About</h3>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
-        <a href="#">Main Game</a>
+        <a href="https://www.farcana.com/career">Career</a>
       </div>
     </section>
 
