--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
       </div>
 
-      <img src="farcana jj.png" alt="" />
+      <img class="homeimg" src="farcana jj.png" alt="" />
     </section>
 
     <section class="products container" id="product">
